fixed member list on smaller screens

--- a/AlanWalkerTheme/trivia.css
+++ b/AlanWalkerTheme/trivia.css
@@ -955,8 +955,8 @@ fill: var(--online);
     max-height: unset;
     box-shadow: var(--elevation-stroke), var(--elevation-high);
     z-index: 1;
-    transform: translateX(180px);
-    transition: transform .5s;
+    transform: translateX(calc(100vw - 60px));
+    transition: transform 1s;
   }
   .content-1jQy2l>.membersWrap-3NUR2t:hover,
   .content-1jQy2l>.container-2o3qEW:hover .membersWrap-3NUR2t,
@@ -965,7 +965,10 @@ fill: var(--online);
   }
   .membersWrap-3NUR2t:not(#dv-mount),
   .membersWrap-3NUR2t:not(#dv-mount) > div {
-    width: 240px;
+    width: 100vw;
+  }
+  .member-2gU6Ar {
+    max-width: calc(100% - 16px);
   }
 }
 /*DM/Channel list*/
